# ChangeLog for www-apps/b2evolution
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/b2evolution/ChangeLog,v 1.34 2012/12/31 23:27:57 ago Exp $

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> b2evolution-4.1.6.ebuild:
  Stable for ppc, wrt bug #448516

  29 Dec 2012; Agostino Sarubbo <ago@gentoo.org> b2evolution-4.1.6.ebuild:
  Stable for x86, wrt bug #448516

  29 Dec 2012; Agostino Sarubbo <ago@gentoo.org> b2evolution-4.1.6.ebuild:
  Stable for amd64, wrt bug #448516

*b2evolution-4.1.6 (25 Dec 2012)

  25 Dec 2012; Matti Bickel <mabi@gentoo.org> +b2evolution-4.1.6.ebuild:
  version bump, including unspecified security fix

*b2evolution-4.1.4 (27 Jul 2012)

  27 Jul 2012; Matti Bickel <mabi@gentoo.org> +b2evolution-4.1.4.ebuild:
  version bump (#417109, #282828); ebuild by jaervosz with update to EAPI4 by me

  22 Feb 2008; Benedikt Böhm <hollow@gentoo.org> b2evolution-1.10.2.ebuild,
  b2evolution-1.10.3.ebuild, b2evolution-2.4.0_rc2.ebuild:
  add need_httpd_cgi wrt #208584

  17 Feb 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml,
  b2evolution-1.10.2.ebuild, b2evolution-1.10.3.ebuild,
  b2evolution-2.4.0_rc2.ebuild:
  ebuild cleanup wrt #208584

*b2evolution-2.4.0_rc2 (15 Feb 2008)
*b2evolution-1.10.3 (15 Feb 2008)

  15 Feb 2008; Gunnar Wrobel <wrobel@gentoo.org> files/postinstall-en.txt,
  +files/postupgrade-en.txt, metadata.xml, +b2evolution-1.10.3.ebuild,
  +b2evolution-2.4.0_rc2.ebuild:
  Added b2evolution-1.10.3 and 2.4.0_rc2 in response to request #203367.

  15 Aug 2007; <wrobel@gentoo.org> -b2evolution-0.9.1.ebuild:
  Removed vulnerable b2evolution-0.9.1 (see #162171).

  14 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  b2evolution-1.10.2.ebuild:
  ppc stable, bug #162171

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> b2evolution-1.10.2.ebuild:
  amd64 stable, security bug 162171

  10 Aug 2007; Raúl Porcel <armin76@gentoo.org> b2evolution-1.10.2.ebuild: