@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX postinstall-en.txt 611 SHA256 2333fda76f492a6700bccd4b1121cec4a02f2e419141fa11b9555ff4ef25aa99 SHA512 5ec5ceeeed44446084e18fa739cff5c16eca315bc11f8c0178a6217a5e0f0695a051187bc1d77d685f14e126df4b134e7ab3fbef100ea60ab7741aa2650a9ff8 WHIRLPOOL fe9e2e05c3cb1de76af12f656a33b22819c5a1274936261bd604ec793a37084beb5d9b9f8aac9e1820ca58d63c15cbd1e93e8fc35d829145fc06e5440be60cd0
 AUX postupgrade-en.txt 214 SHA256 312ce51eb9413b0a127a63dad962a7de17a0a3c99d64abeeb282e9f6edbcb837 SHA512 18d0dbe48a1e0b290f72b0a7a7dee4c28c9c24366f9073f2938d5227c80d3b62b6ed76a8a11c59f4e641bde731a746178c4e2eaaa736660ee875917c24fb8243 WHIRLPOOL 6958b6a229d3f36ff009e7c6269bfe3deedf0937f28a60d060ffc7c475b478458749b078dca50a6a0099b5275bc4ab28580d3ba211f524777395eb3147f6c844
 DIST b2evolution-1.10.2-2007-06-08.zip 2555991 SHA256 d625ff54618a2a668dd8b7912495fb0fdb473efee33293d359b342aeb5545225
@@ -5,10 +8,17 @@ DIST b2evolution-1.10.3-2007-11-01.zip 2547297 SHA256 d6a5c944acb9e4fc0f7c58f37f
 DIST b2evolution-2.4.0-rc2-2008-01-23.zip 2916300 SHA256 341cafb438beba8a940456a954d232b7667fc2f996478d4b73d029e5180608f5
 DIST b2evolution-4.1.4-stable-2012-04-03.zip 6190606 SHA256 06657dd7efc341831d244b47e1b7dc8b53fc172279e32921fe71dbd3a810a59b SHA512 8c22d13afcdef29a6a24e9f49bea4a0f9b73434ad0844085d352b9152a52820f0dbd7f70c73387d4d0b7d2c938ee9b48d6a88bf584336933be0821dd4106e745 WHIRLPOOL 1ad5dc463420481151a0cf96fc749bf771c8b1568dcb6d1368363faf36fd2a80f39176430199d2cc615a54ebee71875732146528dafba8576da25a119364af6d
 DIST b2evolution-4.1.6-stable-2012-11-23.zip 6112292 SHA256 83ba9f68e4b974cf6eab8757f98b9c62265ff31063a25dc1bb6a710971a36c23 SHA512 85818df61d924f27e68e1cbcffdb8205bb35475ad4035fca7f510b9c0ef9032afbc40f75f61c5211b2395e6b76a869861010ebb39953abdddac5598338af7238 WHIRLPOOL c0082f1e2733b7d86f729594214033a2a21452b34e6a67adc2ac9f2e04996f34ddf43b659c2d6f579816aaeae2874bf175e41ac86021d43e42fbfad397182d13
-EBUILD b2evolution-1.10.2.ebuild 1239 SHA256 ac941774875a46d32f881d800b62ef00e461b5cf640bc88878d6967fdd6f973f SHA512 be778dc7606e5607c5a671dc99debe87103b61d41b2a9c440a21a44891dc872a8b2723597b4c81f0fc2924de0285eb0be4192bf4870b8500c90bb6b21b7c4e8d WHIRLPOOL caa7f367f764724eb815fd094623cc9a4bc4b5dde237b629d6b3e05e4e48a836ef7b545252604022270f113afdb9665119a856ce67b3988426fcd195d5ea3281
-EBUILD b2evolution-1.10.3.ebuild 1233 SHA256 51b7d618eaff4fecaccad9f03707aafeba9d67bb800e925af3745adc1ac48d92 SHA512 2d6032cb8d9770074e433c378cc82d625626d3febc478e07b84a32763903a475c3dc516724a56ffba6bb72481e1c5d90941511ff3cf752b3bb1c0ec2677e839f WHIRLPOOL 7278229408d3fec9f4f0c7c4a5cf1ef8c9cb26a02071c519dff7779b9e5b9531a3fb3b39e987e4929097709f45efce47913b357a516b1b6421ef5a3332a07f6c
-EBUILD b2evolution-2.4.0_rc2.ebuild 1296 SHA256 59fe0c62a0a9da16c662b905b01f73a1340d72c026c5eb558bedbeb9abfde354 SHA512 90dfe3d9a0d1a413aeca669ba07699e574b60588cd9c83943911cb5da0c8e30db9e303fcac77312d5e4e5810443c7bc4e34c534ae9c935c98c70290d334467ef WHIRLPOOL 3d08a561906162644f1139a844050726ef9625cdffe445bdc2f9fc8eece721798b32401935410811d8842d8f8b428743015debc8e6bb4c1875aea31a92968e8b
-EBUILD b2evolution-4.1.4.ebuild 1217 SHA256 f4cee007cb8528d33fe00c72687c579b0a6b39950a7ecf8ab741a95359efb8c1 SHA512 ceb55d2e1cb0837a53e6d514d73e861fc8300d3e1c59e1b8bfafd94cdd5ef31d5b4d5add62c13bb069cb33255b9e48852a36e796914ba2871bc6728c74831329 WHIRLPOOL 763e10e7523086abd751a71083822800e92bccff9c5610862bcf182636494df06b8fad211efefc083d731b6053f7b4557a39e05d28664f65de0afe67c1395539
-EBUILD b2evolution-4.1.6.ebuild 1213 SHA256 ea4f9825f44fd5928b0f271fe40b42168e473f7bde65715d7017b6c5b2aa8a79 SHA512 40286f11a8687d7efffaeef62ecc8f983314911b894028747a0ad5568c84797a939598d18763f09856a07c9c4126040884ef0fb630a272114d3077289819ae0c WHIRLPOOL 6877cff6da18f58aed4b75ba02095c22b51f352992b8cd7210c259da4cabeeb992d4ec22dbcc5fa052ba90dee01f35c00f75e03e94f3de19800a36a98529debd
-MISC ChangeLog 5638 SHA256 13e7f4b220cdc0e4aea660b3fb625aac7dd1477a2a51ef474008bd3e5023829c SHA512 6dfd3dd322e0db8f240fd121aaef1376d449084190933f4722fd63c6b14298eec14dd097880b1a72e155c9dde409f48b4890bfec550fb733eca1d7234f33f09e WHIRLPOOL 4279812db4d11e84c057d41076067cfde30d0cdd8705a770062de453b95a035d8e250415e5b51e11292e24319ff5c6e5ec4d13512577317294629dd6cd523bad
+EBUILD b2evolution-1.10.2.ebuild 1234 SHA256 25e682f48bf4a6eb0f10040a1807b9c0bbbb9912fda4a7e98b709ad0462f3092 SHA512 2b51767b3041697b8481b0e40263a4591cc7c875c0a15026b6be53fce9444359387551756d6759413784649a2ec9c3afa977b6a89b9fe151301ad009b951893a WHIRLPOOL 37442d0421006029940e33ddc13d058b99ab0fabd191121e88632414ae20f1bf38d93bb5e420f6472e9cd45d2919b1bee9e2c7dccbbd63b0d0ff7c1466f6d491
+EBUILD b2evolution-1.10.3.ebuild 1227 SHA256 e48842351248dc8eeb5c779b6fb489ed9faae145f28b89e607abc568f1edb38c SHA512 67458078d60e9f84ad759fd286822ead3bd354af71db12ef74c9751083ae0e76e7d29ae42d479b1aee61bde810604f84b8166b32bbc190eb91232624b032caec WHIRLPOOL b7ddc783552de7e459d2e4bd7c56b8c7b5b4e7b1161b2b97e1add984fe5db8477a5217826ce64206ef9e7334c474d047696360354bacc371bf5e64d55b8385bb
+EBUILD b2evolution-2.4.0_rc2.ebuild 1290 SHA256 490e8eac56bcf92e6113b016247da531eddb62bf4a9600c2e0a55d16edae1de2 SHA512 5bc1b7f6e02f392e3c6d03fb9fdfd8a1e60f3cc36e1a46de0d45d79430e66849e69740b2966aa7ecdce7b67d1712390a9a3a11891f6aea897ecb193147e605e3 WHIRLPOOL 8dc23396e3133192c5373be6403e6ce42f9f92fdd86ebbb3a5ed6cedcabefd2b0ae51b745f573c1db02f624f67e1d6cbc4edc20d51389395e8029353750ac8d2
+EBUILD b2evolution-4.1.4.ebuild 1213 SHA256 2330a704fa09905c92aad37741cb2a0a537c96a0fcb274ec42426e9946c75a2e SHA512 6bbf2111c29a4ec3a74f30478f5eada6aef410c215bbf38fff08b5c47f6e6bda3b75954b1bc92e5885a8ee2e3388f48e2e6eaff8a9f0415ff226e3d2a6b1e579 WHIRLPOOL b810c54a0826e623890b627e6c30475bd54e6cd492340bfee75a520ba3461aead93d305210a90db511d7f4f174489d42e3cbab8512c236d286c313234abbeafa
+EBUILD b2evolution-4.1.6.ebuild 1210 SHA256 2bf27eb1a23b033dcffa9e91ded870d0eb7231407c2dc27da9bc18add2b42777 SHA512 fef3c6263f3f197b696d1f34cad13d65244d42f3efe95672c81c7a688399402d5646d72b99fff1b9676e93a7d96e5703f7946118c10167a468f5cf4c8f8c2524 WHIRLPOOL faed156d28175d0311680255a4b0d132026b6b67a7bcc276b9a4129b702f73b18e9d3149f0ce463c2e0756fd61ac6c1a5d8cd1116a6594ce78b74f0c2a69afa4
+MISC ChangeLog 5854 SHA256 9408395460b8fb202b5a19d525ed1131dd33c215c62bb7585633fda7dbf78566 SHA512 40e63a60b72c5f4d1d8b28579e27ec5d8ebfb915aef6c3b1cd996245c3ab9e137c6239b04e5ac10d90a98a43c12091e04409ecb1f76d4450d8c68364a49d5f80 WHIRLPOOL 6a190837e72c85cf24c2b47be1e6a3acc4485b70390ede467196e79fd62cbe71db07f21493b94534a523d0e7a2c77a7e8e1f1aa17e0746bd85c57d974c8b5e25
 MISC metadata.xml 162 SHA256 84ff2fc6c9a4af1b9dbe32aa81ab84c2958bc1bd65a9977686df2dcab6e420d0 SHA512 550d0f517601255e5c9b120a03f1dad37a1a75bdaadad486ddbd2380a7f0dd884970400574455d34d3ba6e800d9fd21467dfb7f89ba27a0aa8a65e7a265534e3 WHIRLPOOL d50adcb067d0290aa7dfe5aebd0e8abf4939ece7afbf284920d08f2bf04f9306f0062a78cacb7572a12735ac41545440fcf138beda81cc53774950bdde495dcb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlDjK+oACgkQuQc30/atMkAymACgvMSy4AFIYCna4FOoi8KooiEs
+y2oAn0f6f0aMKzu71WObdBvMyXuux7z+
+=315Z
+-----END PGP SIGNATURE-----
