@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/b2evolution
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/b2evolution/ChangeLog,v 1.34 2012/12/31 23:27:57 ago Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/b2evolution/ChangeLog,v 1.35 2013/01/01 18:33:12 armin76 Exp $
+
+  01 Jan 2013; Raúl Porcel <armin76@gentoo.org> b2evolution-1.10.2.ebuild,
+  b2evolution-1.10.3.ebuild, b2evolution-2.4.0_rc2.ebuild,
+  b2evolution-4.1.4.ebuild, b2evolution-4.1.6.ebuild:
+  Drop alpha keywords
 
   31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> b2evolution-4.1.6.ebuild:
   Stable for ppc, wrt bug #448516
